--- a/index.html
+++ b/index.html
@@ -1,16 +1,108 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>The One Above All | Marvel Comic DB</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" 
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="shortcut icon" href="#">
   </head>
   
   <body>
-    <script src="" async defer></script>
+    <header>
+      <section id="header-section">
+        <h1>The One Above All</h1>
+        <p>Marvel Comic DB</p>
+
+        <!-- <nav>
+          <ul>
+            <li><a href="#">Characters</a></li>
+            <li><a href="#">Events</a></li>
+            <li><a href="#">Series</a></li>
+          </ul>
+        </nav> -->
+      </section>
+    </header>
+
+    <div class="title">
+      <h2 class="titleHeader"  id="titleHeader-id">Character Search</h2>
+      <p id="titleSubheader-id"> Search for any Marvel Character</p>
+      <form action="">
+        <input type="text" name="search" id="search-bar" value="Nick Fury">
+        <button type="submit" id="lookup-button">Look Up</button>
+        <div class="dropdown-list"></div>
+        <div class="list-container" id="list-container-id"></div>
+
+      </form>
+    </div>
+
+    <section class="body" id="body-id">
+      <section class="bodyResult" id="bodyResult-id">
+        <h2 id="resultName-title"></h2>
+        <img src="" alt="" id="result-thumbnail">
+      </section>
+
+      <section class="resultBio" id="resultBio-id">
+        <h3 id="resultbio-title"></h3>
+      </section>
+
+      <section id="result-comics">
+        <h3 id="resultcomics-title"></h3>
+        <ul>
+          <li><a href="#">Comic 1</a></li>
+          <li><a href="#">Comic 2</a></li>
+          <li><a href="#">Comic 3</a></li>
+          <li><a href="#">Comic 4</a></li>
+          <li><a href="#">Comic 5</a></li>
+        </ul>
+      </section>
+    </section>
+
+    <aside id="aside-section">
+      <section id="aside-character-section">
+        <h2 id="aside-title">Featured Character</h2>
+          <ul>
+            <li><a href="#">Character 1</a></li>
+            <li><a href="#">Character 2</a></li>
+            <li><a href="#">Character 3</a></li>
+            <li><a href="#">Character 4</a></li>
+            <li><a href="#">Character 5</a></li>
+          </ul>
+      </section>
+
+      <section id="aside-event-section">
+        <h2 id="aside-title">Featured Events</h2>
+          <ul>
+            <li><a href="#">Event 1</a></li>
+            <li><a href="#">Event 2</a></li>
+            <li><a href="#">Event 3</a></li>
+            <li><a href="#">Event 4</a></li>
+            <li><a href="#">Event 5</a></li>
+          </ul>
+      </section>
+
+    </aside>
+
+    <footer>
+      <section id="footer-section">
+        <p>Created by <a href="">Lightinthebulb</a></p>
+        <p id="marvel-rou">Data provided by Marvel. © 2014 Marvel</p>
+      </section>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/core.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/md5.js"></script>
+    <!-- <script src="./config.js"></script> -->
+    <script src="./app.js"></script>
   </body>
 </html>
+
+<!-- f76071507946b2a2f86508b243f3d480 -->
+
